# vibe_dialog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: design.md
tests/: test_commands.py  test_models.py  test_services.py
vibe_dialog/: __init__.py  __main__.py
vibe_dialog/backend/: __init__.py  commands.py  models.py  services.py  utils.py
vibe_dialog/frontend/: __init__.py  app.py
vibe_dialog/frontend/static/css/: styles.css
vibe_dialog/frontend/static/js/: app.js
vibe_dialog/frontend/templates/: index.html
